--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-pytorch
-torchvision
-jupyterlab
-matplotlib
+jupyterlab==0.35.3
+pathlib==1.0.1
+pytorch==0.4.1
+torchvision==0.2.1
+numpy==1.15.4
+Pillow==4.1.1
+matplotlib==3.0.2
+# skorch==0.5.0
+# imgaug==0.2.7
+# albumentations==0.1.11
